# box_aabb

./: .gitignore  README.md  __init__.py  _bench_boundary_expand.py  _bench_compare.py  _profile_phase_breakdown.py  _profile_time_breakdown.py  _profile_v1_v2.py  _run_rrt_debug.py  _test_collision_wsl.py  _test_input.json  _verify_out.txt  bench_descent.py  compare_test1.txt  interval_fk.py  models.py  ompl_test_input.json  pipe_out.txt  pipeline_out.txt  pipeline_out2.txt  pipeline_result.txt  pyproject.toml  robot.py  setup_cython.py  test_result.txt  v3_refactoring_plan.md  新构思  重构prompt  问题总结和改进方向
v1/: README.md  pyproject.toml
v1/benchmarks/: _convert_cache.py  bench_hier_cache.py  bench_panda_multi.py  bench_v6_perf.py  compare_critical_vs_random.py  compare_v1_v2_current.py  cprofile_ffb.py  planner_benchmark.py  profile_critical.py  profile_v2.py  threshold_experiment.py
v1/doc/zh/: box_tree_expansion_detail.md  design_document.md
v1/examples/: __init__.py  aabb_report.md  generate_panda_obs_viz.py  random_box_demo.py  view_path.py
v1/src/box_aabb/: aabb_calculator.py  interval_fk.py  robot.py
v1/src/planner/: _hier_core.c  box_forest.py  box_query.py  box_rrt.py  gcs_optimizer.py  hier_aabb_tree.py  interactive_viewer.py  metrics.py  parallel_collision.py  report.py  visualizer.py
v1/test/: conftest.py  test_all_methods.py  test_boundary_config.py  test_interval_math.py  test_models.py
v1/test/planner/: conftest.py  test_box_forest_v5.py  test_box_tree.py  test_collision.py  test_deoverlap.py  test_obstacles.py
v3/: README.md  _fix_json.py  _test_path_quality.py  _test_path_quality_full.py  compare_log.txt  exp3_log.txt  pyproject.toml  setup_cython.py
v3/doc/: algorithm.md  experiment_guide.md  notation.md
v3/examples/: viz_2dof_full_pipeline.py
v3/experiments/: exp1_main_comparison.py  exp3_obstacle_change.py  exp4_cache_warmstart.py  exp6_config_sweep.py  exp8_aabb_tightness.py  runner.py
v3/src/baselines/: ompl_adapter.py  rrt_family.py  sbf_adapter.py
v3/src/common/: __init__.py
v3/src/forest/: __init__.py  _hier_core.c  coarsen.py  collision.py  connectivity.py  deoverlap.py  hier_aabb_tree.py  safe_box_forest.py
v3/src/planner/: __init__.py  box_planner.py  box_query.py  connector.py  gcs_optimizer.py  interactive_viewer.py  (+6 more)
v3/tests/: perf_regression.py  v2_baseline.json
v3/viz/: scene_viz.py
(+223 files in other folders)
